[gd_scene load_steps=14 format=3 uid="uid://epn6jxi3iejh"]

[ext_resource type="Script" path="res://Scripts/Levels/levelBase.gd" id="1_t0igq"]
[ext_resource type="TileSet" uid="uid://xy61pbjpfef8" path="res://Tilesets/tile_set.tres" id="2_ljv4m"]
[ext_resource type="PackedScene" uid="uid://co1o3jnm2k22u" path="res://Player/player.tscn" id="2_xyu3k"]
[ext_resource type="Texture2D" uid="uid://bpnvvnewy6act" path="res://Assets/Sprites/Tiles/logic_set.png" id="3_orymm"]
[ext_resource type="TileSet" uid="uid://bi8t1sts5s8k8" path="res://Tilesets/wall_set.tres" id="4_3jiy3"]
[ext_resource type="TileSet" uid="uid://mf4pq4pof2kv" path="res://Tilesets/wall_back_set.tres" id="4_aapch"]
[ext_resource type="PackedScene" uid="uid://bfj77cmvhy0xn" path="res://Scenes/UI/Pause.tscn" id="4_k28r4"]
[ext_resource type="FontFile" uid="uid://cl2j3sd1wf5ch" path="res://Assets/Fonts/Chewy-Regular.ttf" id="5_662ev"]
[ext_resource type="TileSet" uid="uid://bjlusfts0e6u6" path="res://Tilesets/torch_set.tres" id="5_idd1r"]
[ext_resource type="PackedScene" uid="uid://dfpv6fhikmmav" path="res://Scenes/UI/DialogInterface.tscn" id="7_28dga"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ahpxb"]
texture = ExtResource("3_orymm")
texture_region_size = Vector2i(64, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -3)
0:0/0/custom_data_0 = "A"
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -3)
1:0/0/custom_data_0 = "B"

[sub_resource type="TileSet" id="TileSet_w0n8b"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(64, 24)
custom_data_layer_0/name = "chiave"
custom_data_layer_0/type = 4
sources/2 = SubResource("TileSetAtlasSource_ahpxb")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_auecd"]
load_path = "res://.godot/imported/Tileset.png-e9b3b182e6834cf2faf469c423b44388.ctex"

[node name="Level" type="Node2D"]
script = ExtResource("1_t0igq")

[node name="BackgroundRoot" type="Node2D" parent="."]
z_index = -10
z_as_relative = false

[node name="LogicMapLayer" type="TileMapLayer" parent="."]
z_index = -15
y_sort_enabled = true
texture_filter = 1
texture_repeat = 1
tile_set = SubResource("TileSet_w0n8b")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -1
y_sort_enabled = true
texture_filter = 1
texture_repeat = 1
tile_set = ExtResource("2_ljv4m")

[node name="YSort" type="Node2D" parent="."]
y_sort_enabled = true

[node name="WallBackMapLayer" type="TileMapLayer" parent="YSort"]
y_sort_enabled = true
texture_filter = 1
texture_repeat = 1
tile_set = ExtResource("4_aapch")

[node name="WallMapLayer" type="TileMapLayer" parent="YSort"]
y_sort_enabled = true
texture_filter = 1
texture_repeat = 1
tile_set = ExtResource("4_3jiy3")

[node name="Player" parent="YSort" instance=ExtResource("2_xyu3k")]
tile_map_layer_path = NodePath("../../TileMapLayer")
wall_map_layer_path = NodePath("../WallMapLayer")
wall_back_map_layer_path = NodePath("../WallBackMapLayer")

[node name="OggettiDecorativi" type="Node2D" parent="YSort"]
y_sort_enabled = true

[node name="OggettiInterattivi" type="Node2D" parent="YSort"]

[node name="TorchMapLayer" type="TileMapLayer" parent="YSort"]
y_sort_enabled = true
tile_set = ExtResource("5_idd1r")

[node name="DarkOverlay" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="CanvasHUD" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasHUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeLabel" type="Label" parent="CanvasHUD/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -174.0
offset_top = 10.0
offset_right = -26.0
offset_bottom = 63.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("5_662ev")
theme_override_font_sizes/font_size = 40
text = "Tempo : 0"
horizontal_alignment = 2

[node name="Base" type="Control" parent="CanvasHUD/HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -96.0
grow_horizontal = 2
grow_vertical = 0

[node name="StepsLabel" type="Label" parent="CanvasHUD/HUD/Base"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_662ev")
theme_override_font_sizes/font_size = 40
text = "Passi: 0"
vertical_alignment = 1

[node name="Control" type="Control" parent="CanvasHUD/HUD/Base"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TileToActive" type="Label" parent="CanvasHUD/HUD/Base/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_662ev")
theme_override_font_sizes/font_size = 40
text = "12/16"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="CanvasHUD/HUD/Base/Control"]
position = Vector2(755, 46)
scale = Vector2(1.23438, 1.40625)
texture = SubResource("CompressedTexture2D_auecd")
region_enabled = true
region_rect = Rect2(384, 0, 64, 32)

[node name="DialogInterface" parent="CanvasHUD" instance=ExtResource("7_28dga")]
visible = false

[node name="Pause" parent="CanvasHUD" instance=ExtResource("4_k28r4")]
